# sq-dsm

./: Cargo.toml  README.md
net/: Cargo.toml
net/src/: lib.rs  pks.rs
openpgp/: Cargo.toml
openpgp-dsm/src/: lib.rs
openpgp/src/crypto/: mpi.rs
openpgp/src/crypto/backend/cng/: asymmetric.rs
openpgp/src/crypto/backend/nettle/: asymmetric.rs
openpgp/src/crypto/backend/rust/: asymmetric.rs
openpgp/src/crypto/types/: hash_algorithm.rs  symmetric_algorithm.rs
openpgp/src/packet/: key.rs  padding.rs
openpgp/src/types/: bitfield.rs  key_flags.rs  mod.rs
openpgp/tests/data/messages/: crlf-straddles-chunks.txt
sq/: Cargo.toml
sq/src/: sq-usage.rs  sq_cli.rs
sq/src/commands/: certify.rs  decrypt.rs  dump.rs  inspect.rs  key.rs  keyring.rs  mod.rs  sign.rs
sq/tests/dsm/: print_dsm_key_info.sh
